[gd_scene load_steps=2 format=3 uid="uid://cbnytya7ep58b"]

[ext_resource type="Script" path="res://src/objects/book/book.gd" id="1_bpt64"]

[node name="Book" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bpt64")

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_top = 680.0
offset_right = 48.0
offset_bottom = 720.0
focus_mode = 0
text = "Book"

[node name="StatsContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
z_index = 20
custom_minimum_size = Vector2(450, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 394.0
offset_top = 282.0
offset_right = 844.0
offset_bottom = 632.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="StatsContainer"]
layout_mode = 2
text = "Stats For Nerds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatsLabel" type="Label" parent="StatsContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fishs catched: {catched}
Grass touched: {grass}"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
